# cvs

./: .commitlintrc.json  .env.example  .gitignore  CLAUDE.md  Dockerfile  Observability & Metrics for AI Agent.docx  README.md  __init__.py  adr_document_processor.py  conftest.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.emergent/: emergent.yml
adr_vector_database/: __init__.py  chunker.py  file_processor.py  ingestion_pipeline.py  retriever.py  vector_store.py
agents/: state.py  tool_node.py
api/: __init__.py  app.py  dependencies.py
api/dev/: __init__.py
api/models/: __init__.py  query.py  sessions.py
api/rendering/: html_renderer.py
api/routes/: chat.py  feedback.py  health.py  policies.py  query.py  query_stream.py  widget.py
api/static/: chat.css  chat.js
api/templates/: chat.html  unqork_mock.html
api/validation/: __init__.py  input_safety.py  phi_redaction.py
core/: __init__.py  cloudsql_pg_client.py  config.py  embedding_client.py  gcs_client.py  gcs_client_async.py  local_directory_handler.py  logger.py  pgvector_store.py  secrets.py  vertex_ai_client.py
core/stubs/: chat_stub.py
data/golden/: README.md
deploy-configs/common/: common.yaml
docs/architecture/: PROJECT_ANALYSIS.md
docs/observability/: 01_BUSINESS_BRIEF.md  02_TECHNICAL_IMPLEMENTATION.md  MONITORING_AND_VALIDATION_PLAN.md
e2e/: conftest.py  test_harness_e2e.py
eval/: run_eval.py
feedback_manager/: __init__.py  client.py  models.py
integration/: test_smoke.py
memory/: PRD.md
ocr/: llm_ocr_client.py  llm_ocr_client_async.py  mistral_ocr_client.py  mistral_ocr_client_async.py  ocr_orchestrator.py  ocr_orchestrator_async.py  pdf_handler.py  prompt_loader.py  sub_file_handler.py  sub_file_handler_async.py
ocr/data_models/: __init__.py  llm_response.py  mistral_response.py  sub_file_models.py
ocr/prompts/: full_extraction_prompt.txt
policy_vector_database/: models.py  repository.py
scripts/: refresh-ftl-fixture.sh
scripts/ci/: wait_for_api.sh
session_manager/: conversation_handler.py  initialization.py  warmup.py
session_manager/core/: agent_factory.py  session_manager.py
src/: __init__.py
src/adr_vector_database/: __init__.py  chunker.py  data_models.py  file_processor.py  ingestion_pipeline.py  retriever.py  vector_store.py
src/agents/: __init__.py  generate_node.py  graph.py
src/api/: app.py
src/core/: cloudsql_pg_client.py  embedding_client.py  gcs_client.py  gcs_client_async.py  langchain_client.py  pgvector_store.py
src/eval/: scoring.py
src/feedback_manager/: repository.py
src/ocr/: __init__.py  benchmark_ocr_prompts.py  ocr_model_client.py  ocr_orchestrator.py  ocr_orchestrator_async.py  pdf_handler.py  sub_file_handler_async.py
src/policy_vector_database/: __init__.py  processor.py
src/session_manager/: __init__.py  deletion.py
src/tools/: adr_search.py  policy_list.py  policy_search.py  policy_summary.py
tests/: __init__.py
tests/e2e/: test_chat_e2e.py
tests/integration/: conftest.py  test_contracts.py  test_guardrails.py
tests/unit/: __init__.py  conftest.py
tools/: __init__.py  adr_summary.py
unit/adr_vector_database/: __init__.py  test_adr_document_processor.py  test_file_processor.py  test_ingestion_pipeline.py  test_retriever.py  test_vector_store.py
unit/agents/: __init__.py  test_generate_node.py  test_graph.py
unit/api/: conftest.py  test_chat.py  test_dependencies.py  test_dev.py  test_guardrails_pipeline.py  test_health.py  test_history.py  test_html_renderer.py  test_observability.py  test_policies_batch.py  (+6 more)
unqork/: README.md  __init__.py  adr-chatbot.js  manifest.json
(+96 files in other folders)
