[project]
name = "careconnect-adr-ai-agent"
version = "0.1.2"
description = "Care Connect ADR AI agent (placeholder)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.50.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    # Cloud SQL PostgreSQL + pgvector
    "sqlalchemy>=2.0.36",
    "psycopg[binary,pool]>=3.2.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    # BM25 and Ensemble for hybrid retrieval
    "rank-bm25>=0.2.2",
    "langchain-classic>=0.1.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Feedback (MongoDB)
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    # HTML rendering
    "markdown>=3.6",
    "bleach>=6.1.0",
    "tinycss2>=1.3.0",
    # Templating (iFrame chat UI)
    "jinja2>=3.1.0",
    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Async file I/O (used by src/ocr/mistral_ocr_client_async.py)
    "aiofiles>=23.2.0",
    # GCP Secret Manager (runtime secrets in GKE)
    "google-cloud-secret-manager>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pip-audit>=2.7.0",
    "python-semantic-release>=9.8.0,<10",
]
# Playwright-based browser E2E tests. Opt-in — not installed with [dev].
# Install with: .venv/bin/pip install -e ".[e2e]" && playwright install chromium
e2e = [
    "playwright>=1.40.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests requiring a running Docker stack",
    "e2e: marks tests as Playwright end-to-end tests requiring a running Docker stack",
    "slow: marks tests as slow running",
]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by format, not lint

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["bleach", "bleach.*", "markdown", "markdown.*", "aiofiles", "aiofiles.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
branch = "main"
upload_to_pypi = false
upload_to_release = false
changelog_file = "CHANGELOG.md"
build_command = ""
commit_message = "chore(release): v{version} [skip ci]"
